apps/infra/vaultwarden/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden
  namespace: infra
  labels:
    app: vaultwarden
    app.kubernetes.io/name: vaultwarden
    app.kubernetes.io/instance: vaultwarden
    app.kubernetes.io/part-of: phoenyxlab
    app.kubernetes.io/managed-by: kustomize
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vaultwarden
  template:
    metadata:
      labels:
        app: vaultwarden
        app.kubernetes.io/name: vaultwarden
        app.kubernetes.io/instance: vaultwarden
        app.kubernetes.io/part-of: phoenyxlab
        app.kubernetes.io/managed-by: kustomize
    spec:
      containers:
        - name: vaultwarden
          image: vaultwarden/server:1.36.0
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config
              mountPath: /data
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: vaultwarden-config
