apps/infra/vaultwarden/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  namespace: infra
spec:
  selector:
    app: vaultwarden
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
