apps/infra/vaultwarden/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden
  namespace: infra
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - vaultwarden.phoenyxlab.xyz
  rules:
    - host: vaultwarden.phoenyxlab.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vaultwarden
                port:
                  number: 80
